--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
   <!-- CSS only -->
   <link rel="stylesheet" href="css/styles.css" />
-  <link rel="icon" href="favicon.ico">
+  
+  <!-- favicon -->
+  <link rel="icon" href="Images/favicon.ico">
 
   <!-- Bootstraps JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
